# quant_sentinel

./: .dockerignore  .editorconfig  .env  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_2026-05-04.md  CHANGELOG_ML_INTEGRATION.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER_GUIDE.md  Dockerfile  INSTRUKCJA.md  LICENSE  QUICKSTART_V2.4.md  README.md  SETUP.md  ZMIANY_V2.1.md  backtest_harness.py  docker-compose.yml  eval_rl.py  migrate_to_turso.py  pyproject.toml  quality-check.sh  regenerate_rl_onnx.py  requirements.txt  requirements_fixed.txt  retrain_attention_loop.py  retrain_deeptrans_loop.py  retrain_dpformer_loop.py  retrain_lstm_loop.py  run.py  run_backtest_grid.py  (+12 more)
.github/: dependabot.yml
api/: __init__.py  main.py
data/: sentinel.db  td_xauusd_5m_60d.csv  test_sentinel.db  voter_accuracy_log.jsonl
docs/: ADR_001_DECISIONS.md  BACKEND_STARTUP_GUIDE.md  BACKTEST.md  BACKTEST_GRID.md  DASHBOARD.md  DEPLOY.md  DISCLAIMER.md  FRONTEND_FIX_NETWORK_ERROR.md  FRONTEND_ML_INTEGRATION.md  INDEX.md  INTEGRATION_SUMMARY.md  LIVE_DATA_INTEGRATION.md  ML_ENSEMBLE_INTEGRATION.md  OPENAI_AGENT_SETUP.md  OPERATIONS_PLAYBOOK.md  OPERATIONS_RUNBOOK.md  PORTFOLIO_SIGNALS_FIX.md  RAPORT_V2.3.md  RETRAIN_LOOPS.md  RL_TUNING.md  RUNBOOK_DR.md  RUNBOOK_RESTART.md  SCHEMA_CHANGES.md  SECRETS_ROTATION.md  SHADOW_LOG_DIRECTIONAL_ALIGNMENT.md  TRADES_PORTFOLIO_FIXES.md  TRANSFORMER_ENSEMBLE.md  VERSIONING.md  walk_forward_v2_5min_thr0.3.json  walk_forward_v2_5min_thr0.5.json  walk_forward_v2_5min_thr0.7.json  (+4 more)
(+682 files in other folders)
